# athena

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile.in  LICENSE.md  README.md  appveyor.yml  conanfile.txt  dependencies.cmake  library.h
src/: CMakeLists.txt
src/backend/llvm/: AthenaJIT.cpp  CMakeLists.txt  CodeGen.cpp  GraphPartitionPlanner.cpp  GraphPartitionPlanner.h  ImageManager.cpp  ImageManager.h  LLVMExecutor.cpp  LLVMGenerator.cpp  LLVMGenerator.h  LLVMGeneratorFunctor.cpp  LLVMTrivialAllocator.cpp  VMAllocationTable.cpp  builtins.td  tablegen.py  utils.cpp  utils.h
src/backend/llvm/allocators/: LayerAllocator.cpp  LayerAllocator.h  TrivialAllocator.h
src/backend/llvm/codegen/: Mangler.cpp  Mangler.h  add.cpp  allocate.cpp  common.h  fill.cpp  matrix.cpp  mse.cpp  register_default_functors.cpp  register_default_functors.h  util.cpp
src/backend/llvm/jit/: AthenaJIT.cpp  AthenaJIT.h  CMakeLists.txt  MergeLayer.cpp  MergeLayer.h
src/backend/llvm/mlir/: CMakeLists.txt  GraphDialect.cpp  GraphDialect.h  GraphDialect.td  LLVMTranslator.cpp  MLIRGenerator.cpp
src/backend/llvm/runtime/: builtins_base.td  runtime_base.td  tablegen.py
src/backend/llvm/runtime-cpu/: CMakeLists.txt  add.cpp  allocate.cpp  fill.cpp  matrix.cpp  mse.cpp
src/backend/llvm/runtime-driver/: CMakeLists.txt  runtime-driver.cpp
src/core/: AbstractGenerator.cpp  AbstractLoader.cpp  AbstractLogger.cpp  AbstractNode.cpp  Accessor.cpp  Allocator.cpp  CMakeLists.txt  Clear.cpp  Context.cpp  DataType.cpp  Entity.cpp  Error.cpp  Executor.cpp  FatalError.cpp  Generator.cpp  GradientDescent.cpp  Graph.cpp  IndexFunctions.cpp  InnerFunctions.cpp  InputNode.cpp  Logger.cpp  LossNode.cpp  Node.cpp  NodeType.cpp  Operation.cpp  Optimizer.cpp  OutputNode.cpp  PublicEntity.cpp  ShapeView.cpp  Tensor.cpp  TensorShape.cpp  Traversal.cpp  libinfo.cpp  log.cpp
src/core/context/: Context.cpp
src/core/context/internal/: ContextInternal.cpp
src/core/graph/: Graph.cpp  GraphCompiler.cpp  GraphCompilerOld.cpp
src/core/graph/internal/: GraphCompiler.cpp  GraphInternal.cpp
src/core/graph/optimizer/: GradientDescent.cpp
src/core/inner/: AllocationRecord.cpp  GlobalTables.cpp  InnerFunctions.cpp  Table.cpp  Tensor.cpp
src/core/loader/internal/: AbstractLoaderInternal.cpp
src/core/node/: AbstractNode.cpp  InputNode.cpp  LossNode.cpp  Node.cpp  NodeType.cpp  OutputNode.cpp
src/core/node/internal/: AbstractNodeInternal.cpp  InputNodeInternal.cpp  NodeInternal.cpp  OutputNodeInternal.cpp
src/core/operation/internal/: OperationInternal.cpp
src/core/tensor/: DataType.cpp  ShapeView.cpp  TensorShape.cpp
src/core/tensor/internal/: TensorInternal.cpp
src/loaders/: CMakeLists.txt  ConstantLoader.cpp  MemcpyLoader.cpp
src/loaders/MemoryLoader/: CMakeLists.txt  MemoryLoader.cpp
src/loaders/internal/: ConstantLoaderInternal.cpp  CopyLoaderInternal.cpp  DummyLoaderInternal.cpp  MemcpyLoaderInternal.cpp
src/model/: CMakeLists.txt  DotModel.cpp  NativeModel.cpp
src/operation/: AddOperation.cpp  CMakeLists.txt
src/operation/internal/: AddOperationInternal.cpp  CombineOperationInternal.cpp  CopyOperationInternal.cpp  DecreaseOperationInternal.cpp  DivideOperationInternal.cpp  FillOperationInternal.cpp  LogLossOperationInternal.cpp  MatMulOperationInternal.cpp  MulConcatOperationInternal.cpp  MulOperationInternal.cpp  SigmoidOperationInternal.cpp
src/ops/: AddOperation.cpp  CMakeLists.txt  GEMMOperation.cpp  MSELossFunction.cpp
src/utils/: CMakeLists.txt
src/utils/allocator/: AbstractMemoryResource.cpp  StatelessMemoryResource.cpp  TensorAllocator.cpp
src/utils/error/: Error.cpp
src/utils/logger/: Logger.cpp  log.cpp
src/utils/storages/: HeterogeneousVector.cpp
src/utils/string/: String.cpp  StringView.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in
tests/integration/: CMakeLists.txt  integration_test_run.py
tests/integration/JIT/: CMakeLists.txt  JITIntegrationTests.conf  config.yml  core.cpp  dataset_intersect.csv  dataset_no_intersect.csv  gemm.cpp  ir.cpp  linreg.cpp  main.cpp  vector_add.cpp
tests/integration/LegacyRuntimeDriver/: CMakeLists.txt  config.yml  main.cpp
tests/integration/OpenCLRuntime/: CMakeLists.txt  config.yml  main.cpp
tests/integration/RuntimeDriver/: CMakeLists.txt  config.yml  main.cpp  runtime-driver-test.conf
tests/integration/framework/: CMakeLists.txt  framework.cpp  options.h.in
tests/integration/runtime-driver-test/: CMakeLists.txt  main.cpp  runtime-driver-test.conf
tests/regression/backend/: CMakeLists.txt
tests/regression/backend/llvm/: BasicIR.cpp  CMakeLists.txt  framework.h  main.cpp
tests/regression/backend/mlir/: CMakeLists.txt  basic.cpp  config.yml  translate.cpp
tests/testutils/: TestAllocator.h
tests/unit/: CMakeLists.txt
tests/unit/backend/: CMakeLists.txt
tests/unit/backend/llvm/: AthenaJIT.cpp  CMakeLists.txt  LayerAllocator.cpp  TrivialAllocator.cpp
tests/unit/backend/llvm_jit/: AthenaJIT.cpp  CMakeLists.txt
tests/unit/backend/llvm_runtime/: CMakeLists.txt  common.h  gemm.cpp
tests/unit/core/: CMakeLists.txt  Context.cpp  FatalError.cpp  Generator.cpp  Gradient.cpp  Graph.cpp  InputNode.cpp  Node.cpp  Operation.cpp  ShapeView.cpp  Tensor.cpp  TensorShape.cpp  Traverse.cpp  log.cpp  main.cpp
tests/unit/core/inner/: Tensor.cpp
tests/unit/loaders/: CMakeLists.txt  MemoryLoader.cpp
tests/unit/model/: CMakeLists.txt  DotModel.cpp  NativeModel.cpp
utils/athena-tablegen/lib/: CMakeLists.txt  MarkdownBackend.cpp  MarkdownBackend.h  RuntimeInfoBackend.cpp  RuntimeInfoBackend.h  WrapperBackend.cpp  WrapperBackend.h  utils.h
utils/athena-tablegen/src/: CMakeLists.txt  main.cpp
utils/chaos/lib/Dialects/: CMakeLists.txt  ClangDialect.cpp  (+1 more)
utils/chaos/test/: CMakeLists.txt  gemm.cpp
utils/debugger/src/: CMakeLists.txt  debugger.cpp  debugger.h
utils/kernels/: CMakeLists.txt  bin2c.py
utils/kernels/include/: utils.h
utils/kernels/src/: CMakeLists.txt  fill.cl
utils/lsdevice/: CMakeLists.txt  main.cpp
(+462 files in other folders)
