add_athena_library(runtime-driver STATIC runtime-driver.cpp)
target_link_libraries(runtime-driver athena-core)
add_dependencies(runtime-driver runtime-llvm-cpu)
if (UNIX AND NOT APPLE)
    target_link_libraries(runtime-driver dl.so)
#else ()
#    message(FATAL_ERROR "Dynamic link library does not defined for your OS")
endif ()
